# 2025_CCJ_MS-IA

./: .gitignore  .readthedocs.yaml  README.md  counter.py  evaluate_latent_classifier.py  main.py  pyproject.toml  requirements.txt
data/: gait_class_references_v1.xlsx
data_balanced/: README.md
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst  intro.rst  src.InfluxDBms.rst  src.plotting.rst  src.rst
evaluation/: README.md
evaluation/eval_len150/: results_latent_classifier_len150_len150.csv
evaluation/eval_len200/: results_latent_classifier_len200_len200.csv
evaluation/eval_len240/: results_latent_classifier_len240_len240.csv
evaluation/eval_len295/: results_latent_classifier_len295_len295.csv
evaluation/eval_len350/: results_latent_classifier_len350_len350.csv
evaluation2/: README.md
evaluation2/eval_A/: results_latent_classifier_len295.csv
evaluation2/eval_B/: results_latent_classifier_len295.csv
evaluation2/eval_C/: results_latent_classifier_len295.csv
evaluation2/eval_D/: results_latent_classifier_len295.csv
evaluation2/eval_E/: results_latent_classifier_len295.csv
latent_data/: README.md  X_latent_data.npz
latent_images_pca/: README.md
latent_images_umap/: README.md
models/base_run/: best_transformer_autoencoder.h5  (+5 more)
models_len/: README.md  summary_all_models.csv  summary_lengths.txt
plots/: README.md
src/: README.md  analyze_models.py  encode_latent_transformer.py  evaluate_latent_classifier.py  export_balanced_chunks.py  export_model_data.py  generate_trainval.py  inference.py  main.py  plot_chunks.py  plot_latents.py  plot_loss.py  plot_losses.py  run_length_experiment.py  train_autoencoder.py  train_logistic_classifier.py
(+370 files in other folders)
