[tool.poetry]
name = "influxdbms"
version = "0.1.0"
description = "Extracción de datos de marcha desde InfluxDB"
authors = ["José Campos Cuiña <jose.campos.cuina@alumnos.upm.es>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "InfluxDBms", from = "src" },
    { include = "plotting", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "^2.2"
influxdb-client = "^1.41"
openpyxl = "^3.1"
pyyaml = "^6.0.2"
urllib3 = "^2.4.0"
python-dateutil = "^2.9.0.post0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
extract-ms = "main:main"
plot-ms = "plotting.plot_chunks:main"